--- a/package.json
+++ b/package.json
@@ -6,33 +6,35 @@
   "license": "MIT",
   "repository": "https://github.com/Fabio286/antares.git",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development electron-webpack dev",
     "debug": "npm run rebuild:electron && npm run debug-runner",
-    "debug-runner": "node scripts/dev-runner.js --remote-debug",
+    "debug-runner": "node scripts/devRunner.js --remote-debug",
     "compile": "npm run compile:main && npm run compile:renderer",
+    "compile:main": "webpack --mode=production --config webpack.main.config.js",
+    "compile:renderer": "webpack --mode=production --config webpack.renderer.config.js",
     "build": "cross-env NODE_ENV=production npm run compile",
     "build:local": "npm run build && electron-builder",
     "build:appx": "npm run build:local -- --win appx",
+    "rebuild:electron": "npm run postinstall && electron-rebuild",
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease alpha",
+    "postinstall": "electron-builder install-app-deps",
     "test": "npm run lint",
     "lint": "eslint . --ext .js,.vue && stylelint \"./src/**/*.{css,scss,sass,vue}\"",
-    "lint:fix": "eslint . --ext .js,.vue --fix && stylelint \"./src/**/*.{css,scss,sass,vue}\" --fix",
-    "postinstall": "electron-builder install-app-deps",
-    "compile:main": "webpack --mode=production --config webpack.main.config.js",
-    "compile:renderer": "webpack --mode=production --config webpack.renderer.config.js",
-    "electron-builder-install": "electron-builder install-app-deps",
-    "rebuild:electron": "npm run electron-builder-install && electron-rebuild"
+    "lint:fix": "eslint . --ext .js,.vue --fix && stylelint \"./src/**/*.{css,scss,sass,vue}\" --fix"
   },
   "author": "Fabio Di Stasio <fabio286@gmail.com>",
-  "main": "dist/app/main.js",
+  "main": "./dist/main.js",
   "build": {
     "appId": "com.fabio286.antares",
     "artifactName": "${productName}-${version}-${os}_${arch}.${ext}",
     "asar": true,
+    "directories": {
+      "output": "build",
+      "buildResources": "assets"
+    },
     "asarUnpack": "**\\*.{node,dll}",
     "files": [
-      "dist/app/**/*",
+      "dist/**/*",
       "node_modules",
       "package.json"
     ],
@@ -139,6 +141,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.3",
     "node-loader": "^2.0.0",
+    "progress-webpack-plugin": "^1.0.12",
     "sass": "^1.42.1",
     "sass-loader": "^10.2.0",
     "standard-version": "^9.3.1",
