--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,7 +22,7 @@
   ],
   "compounds": [
       {
-          "name": "Electron: Main & Renderer",
+          "name": "Electron: All",
           "configurations": ["Electron: Main", "Electron: Renderer"]
       }
   ]
