--- a/package.json
+++ b/package.json
@@ -6,22 +6,38 @@
   "license": "MIT",
   "repository": "https://github.com/Fabio286/antares.git",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development electron-webpack dev",
-    "compile": "electron-webpack",
+    "debug": "npm run rebuild:electron && npm run debug-runner",
+    "debug-runner": "node scripts/devRunner.js --remote-debug",
+    "compile": "npm run compile:main && npm run compile:renderer",
+    "compile:main": "webpack --mode=production --config webpack.main.config.js",
+    "compile:renderer": "webpack --mode=production --config webpack.renderer.config.js",
     "build": "cross-env NODE_ENV=production npm run compile",
     "build:local": "npm run build && electron-builder",
     "build:appx": "npm run build:local -- --win appx",
+    "rebuild:electron": "npm run postinstall && electron-rebuild",
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease alpha",
+    "postinstall": "electron-builder install-app-deps",
     "test": "npm run lint",
     "lint": "eslint . --ext .js,.vue && stylelint \"./src/**/*.{css,scss,sass,vue}\"",
-    "lint:fix": "eslint . --ext .js,.vue --fix && stylelint \"./src/**/*.{css,scss,sass,vue}\" --fix",
-    "postinstall": "electron-builder install-app-deps"
+    "lint:fix": "eslint . --ext .js,.vue --fix && stylelint \"./src/**/*.{css,scss,sass,vue}\" --fix"
   },
   "author": "Fabio Di Stasio <fabio286@gmail.com>",
+  "main": "./dist/main.js",
   "build": {
     "appId": "com.fabio286.antares",
     "artifactName": "${productName}-${version}-${os}_${arch}.${ext}",
+    "asar": true,
+    "directories": {
+      "output": "build",
+      "buildResources": "assets"
+    },
+    "asarUnpack": "**\\*.{node,dll}",
+    "files": [
+      "dist/**/*",
+      "node_modules",
+      "package.json"
+    ],
     "win": {
       "target": [
         "nsis",
@@ -81,11 +97,6 @@
       ]
     }
   },
-  "electronWebpack": {
-    "renderer": {
-      "webpackConfig": "webpack.config.js"
-    }
-  },
   "dependencies": {
     "@electron/remote": "^2.0.1",
     "@mdi/font": "^6.1.95",
@@ -110,28 +121,40 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.7",
+    "@babel/preset-env": "^7.15.8",
     "babel-loader": "^8.2.3",
+    "chalk": "^4.1.2",
+    "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^6.5.0",
     "electron": "^15.3.0",
     "electron-builder": "^22.13.1",
     "electron-devtools-installer": "^3.2.0",
-    "electron-webpack": "^2.8.2",
-    "electron-webpack-vue": "^2.4.0",
+    "electron-rebuild": "^3.2.3",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.18.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.3",
+    "node-loader": "^2.0.0",
+    "progress-webpack-plugin": "^1.0.12",
     "sass": "^1.42.1",
     "sass-loader": "^10.2.0",
     "standard-version": "^9.3.1",
+    "style-loader": "^3.3.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-scss": "^3.21.0",
+    "tree-kill": "^1.2.2",
     "vue": "^2.6.14",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
-    "webpack": "^4.46.0"
+    "webpack": "^5.60.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^3.11.2"
   }
 }
