--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "antares",
   "productName": "Antares",
   "version": "0.3.8",
-  "description": "A cross-platform easy to use SQL client.",
+  "description": "A modern, fast and productivity driven SQL client with a focus in UX.",
   "license": "MIT",
   "repository": "https://github.com/Fabio286/antares.git",
   "scripts": {
