build: transparent background for appx icon

--- a/package.json
+++ b/package.json
@@ -79,7 +79,8 @@
       "artifactName": "${productName}-${version}-portable.exe"
     },
     "appx": {
-      "displayName": "Antares SQL Client",
+      "displayName": "Antares SQL",
+      "backgroundColor": "transparent",
       "identityName": "62514FabioDiStasio.AntaresSQLClient",
       "publisher": "CN=1A2729ED-865C-41D2-9038-39AE2A63AA52",
       "applicationId": "FabioDiStasio.AntaresSQLClient"
