feat(SQLite): connection add/edit masks

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
       "UI",
       "core",
       "MySQL",
-      "PostgreSQL"
+      "PostgreSQL",
+      "SQLite"
    ],
    "svg.preview.background": "transparent"
 }
