test: basic e2e tests

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease alpha",
     "postinstall": "electron-builder install-app-deps",
-    "test": "npm run lint",
+    "test": "npm run compile && node tests/app.spec.js",
     "lint": "eslint . --ext .js,.vue && stylelint \"./src/**/*.{css,scss,sass,vue}\"",
     "lint:fix": "eslint . --ext .js,.vue --fix && stylelint \"./src/**/*.{css,scss,sass,vue}\" --fix",
     "contributors:add": "all-contributors add",
@@ -146,6 +146,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.3",
     "node-loader": "^2.0.0",
+    "playwright": "^1.16.3",
     "progress-webpack-plugin": "^1.0.12",
     "sass": "^1.42.1",
     "sass-loader": "^12.3.0",
