--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -18,6 +18,12 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14
+      
+      - name: Install dependencies
+        run: npm i
+        
+      - name: Run tests
+        run: npm run test
 
       - name: Build/release Electron app
         uses: samuelmeuli/action-electron-builder@v1
