chore: updated appx icons

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "appx": {
       "displayName": "Antares SQL",
       "backgroundColor": "transparent",
+      "showNameOnTiles": true,
       "identityName": "62514FabioDiStasio.AntaresSQLClient",
       "publisher": "CN=1A2729ED-865C-41D2-9038-39AE2A63AA52",
       "applicationId": "FabioDiStasio.AntaresSQLClient"
