--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
   "dependencies": {
     "@electron/remote": "^2.0.1",
     "@mdi/font": "^6.1.95",
+    "@vscode/vscode-languagedetection": "^1.0.21",
     "ace-builds": "^1.4.13",
     "better-sqlite3": "^7.4.4",
     "electron-log": "^4.4.1",
