feat: save window state in order to open the main window in the last position of the screen

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "electron-log": "^4.4.1",
     "electron-store": "^8.0.1",
     "electron-updater": "^4.3.9",
+    "electron-window-state": "^5.0.3",
     "faker": "^5.5.3",
     "marked": "^4.0.0",
     "moment": "^2.29.1",
