--- a/package.json
+++ b/package.json
@@ -112,7 +112,7 @@
     "electron-store": "^8.0.1",
     "electron-updater": "^4.3.9",
     "electron-window-state": "^5.0.3",
-    "faker": "^5.5.3",
+    "faker": "~5.5.3",
     "marked": "^4.0.0",
     "moment": "^2.29.1",
     "mysql2": "^2.3.2",
@@ -143,11 +143,11 @@
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-promise": "^5.2.0",
     "eslint-plugin-vue": "^8.0.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.4.3",
+    "mini-css-extract-plugin": "~2.4.5",
     "node-loader": "^2.0.0",
     "playwright": "^1.16.3",
     "progress-webpack-plugin": "^1.0.12",
