--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
       "target": {
         "target": "default",
         "arch": [
-          "x64"
+          "x64",
+          "arm64"
         ]
       }
     },
@@ -110,7 +111,7 @@
     "better-sqlite3": "^7.4.4",
     "electron-log": "^4.4.1",
     "electron-store": "^8.0.1",
-    "electron-updater": "^4.3.9",
+    "electron-updater": "^4.6.1",
     "electron-window-state": "^5.0.3",
     "faker": "~5.5.3",
     "marked": "^4.0.0",
