fix(Windows): temporary fix to Windows 7 style frame on app startup, closes #169

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,8 @@
       "core",
       "MySQL",
       "PostgreSQL",
-      "SQLite"
+      "SQLite",
+      "Windows"
    ],
    "svg.preview.background": "transparent"
 }
