build: webpack workers configuration

--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "scripts": {
     "debug": "npm run rebuild:electron && npm run debug-runner",
     "debug-runner": "node scripts/devRunner.js --remote-debug",
-    "compile": "npm run compile:main && npm run compile:renderer",
+    "compile": "npm run compile:main && npm run compile:workers && npm run compile:renderer",
     "compile:main": "webpack --mode=production --config webpack.main.config.js",
+    "compile:workers": "webpack --mode=production --config webpack.workers.config.js",
     "compile:renderer": "webpack --mode=production --config webpack.renderer.config.js",
     "build": "cross-env NODE_ENV=production npm run compile",
     "build:local": "npm run build && electron-builder",
     "build:appx": "npm run build:local -- --win appx",
-    "rebuild:electron": "npm run postinstall",
+    "rebuild:electron": "rimraf ./dist &&  npm run postinstall",
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease alpha",
     "postinstall": "electron-builder install-app-deps",
@@ -136,7 +137,6 @@
     "all-contributors-cli": "^6.20.0",
     "babel-loader": "^8.2.3",
     "chalk": "^4.1.2",
-    "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.2",
     "css-loader": "^6.5.0",
     "electron": "^17.0.1",
@@ -154,6 +154,7 @@
     "node-loader": "^2.0.0",
     "playwright": "^1.18.1",
     "progress-webpack-plugin": "^1.0.12",
+    "rimraf": "^3.0.2",
     "sass": "^1.42.1",
     "sass-loader": "^12.3.0",
     "standard-version": "^9.3.1",
