--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "@turf/helpers": "^6.5.0",
     "@vscode/vscode-languagedetection": "^1.0.21",
     "ace-builds": "^1.4.13",
-    "better-sqlite3": "^7.4.4",
+    "better-sqlite3": "^7.5.0",
     "electron-log": "^4.4.1",
     "electron-store": "^8.0.1",
     "electron-updater": "^4.6.1",
@@ -142,6 +142,7 @@
     "electron": "^17.0.1",
     "electron-builder": "^22.14.11",
     "electron-devtools-installer": "^3.2.0",
+    "electron-rebuild": "^3.2.7",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
