perf(PostgreSQL): :zap: Postgres connection update, better error handling and connection string accommodation.
Used the pg package parser function to handle connection strings to lowering chances of errors. All other connection string will work here an example for ssl  ```const args = "postgres://user:password@localhost:5432/db?&sslrootcert=./myCaCertificate.pem&sslcert=./myClientCertificate.pem&sslkey=./myPrivateClientKey.pem&ciphers=mytestcipher&ssl=true"``` for ssh these can be used ```ssh: false, sshHost: '', sshUser: '', sshPass: '', sshKey: '', sshPort: 22,```

no breaking changes

--- a/package.json
+++ b/package.json
@@ -142,6 +142,7 @@
     "electron": "^17.0.1",
     "electron-builder": "^22.14.11",
     "electron-devtools-installer": "^3.2.0",
+    "electron-rebuild": "^3.2.7",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
