--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "moment": "^2.29.1",
     "mysql2": "^2.3.2",
     "pg": "^8.7.1",
+    "pg-query-stream": "^4.2.3",
     "pgsql-ast-parser": "^7.2.1",
     "source-map-support": "^0.5.20",
     "spectre.css": "^0.5.9",
