--- a/.eslintrc
+++ b/.eslintrc
@@ -6,15 +6,22 @@
     },
     "extends": [
         "standard",
+        "plugin:@typescript-eslint/recommended",
         "plugin:vue/recommended"
     ],
+    "parser": "vue-eslint-parser",
     "parserOptions": {
-        "parser": "@babel/eslint-parser",
+        "parser": "@typescript-eslint/parser",
         "ecmaVersion": 9,
         "sourceType": "module",
         "requireConfigFile": false
     },
+    "plugins": [
+        "@typescript-eslint"
+    ],
     "rules": {
+        "space-infix-ops": "off",
+        "object-curly-newline": "off",
         "indent": [
             "error",
             3,
@@ -69,6 +76,20 @@
                     "max": 1
                 }
             }
-        ]
+        ],
+        "@typescript-eslint/member-delimiter-style": [
+            "warn",
+            {
+                "multiline": {
+                    "delimiter": "semi",
+                    "requireLast": true
+                },
+                "singleline": {
+                    "delimiter": "semi",
+                    "requireLast": false
+                }
+            }
+        ],
+        "@typescript-eslint/no-var-requires": "off"
     }
 }
