--- a/package.json
+++ b/package.json
@@ -134,6 +134,12 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.7",
     "@babel/preset-env": "^7.15.8",
+    "@babel/preset-typescript": "^7.16.7",
+    "@types/better-sqlite3": "^7.5.0",
+    "@types/node": "^17.0.23",
+    "@types/pg": "^8.6.5",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "all-contributors-cli": "^6.20.0",
     "babel-loader": "^8.2.3",
     "chalk": "^4.1.2",
@@ -163,7 +169,10 @@
     "stylelint-config-standard": "^22.0.0",
     "stylelint-scss": "^3.21.0",
     "tree-kill": "^1.2.2",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.3",
     "vue": "^2.6.14",
+    "vue-eslint-parser": "^8.3.0",
     "vue-loader": "^15.9.8",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^5.60.0",
