--- a/package.json
+++ b/package.json
@@ -109,13 +109,13 @@
     "@mdi/font": "^6.1.95",
     "@turf/helpers": "^6.5.0",
     "@vscode/vscode-languagedetection": "^1.0.21",
+    "@vue/compat": "^3.2.33",
     "ace-builds": "^1.4.13",
     "better-sqlite3": "^7.5.0",
     "electron-log": "^4.4.1",
     "electron-store": "^8.0.1",
     "electron-updater": "^4.6.1",
     "electron-window-state": "^5.0.3",
-    "faker": "^5.5.3",
     "leaflet": "^1.7.1",
     "marked": "^4.0.0",
     "moment": "^2.29.1",
@@ -128,9 +128,10 @@
     "sql-formatter": "^4.0.2",
     "ssh2-promise": "^1.0.2",
     "v-mask": "^2.3.0",
-    "vue-i18n": "^8.26.5",
-    "vuedraggable": "^2.24.3",
-    "vuex": "^3.6.2"
+    "vue": "^3.2.33",
+    "vue-i18n": "^9.1.9",
+    "vuedraggable": "^4.1.0",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.7",
@@ -141,6 +142,7 @@
     "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
+    "@vue/compiler-sfc": "^3.2.33",
     "all-contributors-cli": "^6.20.0",
     "babel-loader": "^8.2.3",
     "chalk": "^4.1.2",
@@ -172,10 +174,8 @@
     "tree-kill": "^1.2.2",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
-    "vue": "^2.6.14",
     "vue-eslint-parser": "^8.3.0",
-    "vue-loader": "^15.9.8",
-    "vue-template-compiler": "^2.6.14",
+    "vue-loader": "^16.8.3",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.4.0"
