--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease alpha",
     "postinstall": "electron-builder install-app-deps",
-    "test": "npm run compile && node tests/app.spec.js",
+    "test": "npm run compile && npm run test:dry",
+    "test:dry": "xvfb-maybe -- playwright test",
     "lint": "eslint . --ext .js,.vue && stylelint \"./src/**/*.{css,scss,sass,vue}\"",
     "lint:fix": "eslint . --ext .js,.vue --fix && stylelint \"./src/**/*.{css,scss,sass,vue}\" --fix",
     "contributors:add": "all-contributors add",
@@ -138,6 +139,7 @@
     "@babel/eslint-parser": "^7.15.7",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.16.7",
+    "@playwright/test": "^1.21.1",
     "@types/better-sqlite3": "^7.5.0",
     "@types/node": "^17.0.23",
     "@types/pg": "^8.6.5",
@@ -162,7 +164,8 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "~2.4.5",
     "node-loader": "^2.0.0",
-    "playwright": "^1.18.1",
+    "playwright": "^1.21.1",
+    "playwright-core": "^1.21.1",
     "progress-webpack-plugin": "^1.0.12",
     "rimraf": "^3.0.2",
     "sass": "^1.42.1",
@@ -179,6 +182,7 @@
     "vue-loader": "^16.8.3",
     "webpack": "^5.60.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0"
+    "webpack-dev-server": "^4.4.0",
+    "xvfb-maybe": "^0.2.1"
   }
 }
