standalone vue-devtools

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "debug": "npm run rebuild:electron && npm run debug-runner",
     "debug-runner": "node scripts/devRunner.js --remote-debug",
+    "devtools": "npx vue-devtools",
     "compile": "npm run compile:main && npm run compile:workers && npm run compile:renderer",
     "compile:main": "webpack --mode=production --config webpack.main.config.js",
     "compile:workers": "webpack --mode=production --config webpack.workers.config.js",
@@ -125,6 +126,7 @@
     "pg": "^8.7.1",
     "pg-query-stream": "^4.2.3",
     "pgsql-ast-parser": "^7.2.1",
+    "pinia": "^2.0.13",
     "source-map-support": "^0.5.20",
     "spectre.css": "^0.5.9",
     "sql-formatter": "^4.0.2",
@@ -146,6 +148,7 @@
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@vue/compiler-sfc": "^3.2.33",
+    "@vue/devtools": "^6.1.4",
     "all-contributors-cli": "^6.20.0",
     "babel-loader": "^8.2.3",
     "chalk": "^4.1.2",
@@ -153,7 +156,6 @@
     "css-loader": "^6.5.0",
     "electron": "^17.0.1",
     "electron-builder": "^22.14.11",
-    "electron-devtools-installer": "^3.2.0",
     "eslint": "^7.32.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
