--- a/package.json
+++ b/package.json
@@ -137,8 +137,7 @@
     "v-mask": "^2.3.0",
     "vue": "^3.2.33",
     "vue-i18n": "^9.1.9",
-    "vuedraggable": "^4.1.0",
-    "vuex": "^4.0.2"
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.7",
