build: fix compilation issues

--- a/package.json
+++ b/package.json
@@ -109,83 +109,83 @@
     }
   },
   "dependencies": {
-    "@electron/remote": "^2.0.1",
-    "@faker-js/faker": "^6.1.2",
-    "@mdi/font": "^6.1.95",
-    "@turf/helpers": "^6.5.0",
-    "@vscode/vscode-languagedetection": "^1.0.21",
-    "ace-builds": "^1.4.13",
-    "better-sqlite3": "^7.5.0",
-    "electron-log": "^4.4.1",
-    "electron-store": "^8.0.1",
-    "electron-updater": "^5.0.1",
-    "electron-window-state": "^5.0.3",
-    "encoding": "^0.1.13",
-    "leaflet": "^1.7.1",
-    "marked": "^4.0.0",
-    "moment": "^2.29.1",
-    "mysql2": "^2.3.2",
-    "pg": "^8.7.1",
-    "pg-query-stream": "^4.2.3",
-    "pgsql-ast-parser": "^7.2.1",
-    "pinia": "^2.0.13",
-    "source-map-support": "^0.5.20",
-    "spectre.css": "^0.5.9",
-    "sql-formatter": "^4.0.2",
-    "ssh2-promise": "^1.0.2",
-    "v-mask": "^2.3.0",
-    "vue": "^3.2.33",
-    "vue-i18n": "^9.1.9",
-    "vuedraggable": "^4.1.0"
+    "@electron/remote": "~2.0.1",
+    "@faker-js/faker": "~6.1.2",
+    "@mdi/font": "~6.1.95",
+    "@turf/helpers": "~6.5.0",
+    "@vscode/vscode-languagedetection": "~1.0.21",
+    "ace-builds": "~1.4.13",
+    "better-sqlite3": "~7.5.0",
+    "electron-log": "~4.4.1",
+    "electron-store": "~8.0.1",
+    "electron-updater": "~5.0.1",
+    "electron-window-state": "~5.0.3",
+    "encoding": "~0.1.13",
+    "leaflet": "~1.7.1",
+    "marked": "~4.0.0",
+    "moment": "~2.29.1",
+    "mysql2": "~2.3.2",
+    "pg": "~8.7.1",
+    "pg-query-stream": "~4.2.3",
+    "pgsql-ast-parser": "~7.2.1",
+    "pinia": "~2.0.13",
+    "source-map-support": "~0.5.20",
+    "spectre.css": "~0.5.9",
+    "sql-formatter": "~4.0.2",
+    "ssh2-promise": "~1.0.2",
+    "v-mask": "~2.3.0",
+    "vue": "~3.2.33",
+    "vue-i18n": "~9.1.9",
+    "vuedraggable": "~4.1.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.15.7",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-typescript": "^7.16.7",
-    "@playwright/test": "^1.21.1",
-    "@types/better-sqlite3": "^7.5.0",
-    "@types/node": "^17.0.23",
-    "@types/pg": "^8.6.5",
-    "@typescript-eslint/eslint-plugin": "^5.18.0",
-    "@typescript-eslint/parser": "^5.18.0",
-    "@vue/compiler-sfc": "^3.2.33",
-    "all-contributors-cli": "^6.20.0",
-    "babel-loader": "^8.2.3",
-    "chalk": "^4.1.2",
-    "cross-env": "^7.0.2",
-    "css-loader": "^6.5.0",
-    "electron": "^17.0.1",
-    "electron-builder": "^23.0.3",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
+    "@babel/eslint-parser": "~7.15.7",
+    "@babel/preset-env": "~7.15.8",
+    "@babel/preset-typescript": "~7.16.7",
+    "@playwright/test": "~1.21.1",
+    "@types/better-sqlite3": "~7.5.0",
+    "@types/node": "~17.0.23",
+    "@types/pg": "~8.6.5",
+    "@typescript-eslint/eslint-plugin": "~5.18.0",
+    "@typescript-eslint/parser": "~5.18.0",
+    "@vue/compiler-sfc": "~3.2.33",
+    "all-contributors-cli": "~6.20.0",
+    "babel-loader": "~8.2.3",
+    "chalk": "~4.1.2",
+    "cross-env": "~7.0.2",
+    "css-loader": "~6.5.0",
+    "electron": "~17.4.3",
+    "electron-builder": "~23.0.3",
+    "eslint": "~7.32.0",
+    "eslint-config-standard": "~16.0.3",
+    "eslint-plugin-import": "~2.24.2",
+    "eslint-plugin-node": "~11.1.0",
+    "eslint-plugin-promise": "~5.2.0",
+    "eslint-plugin-vue": "~8.0.3",
+    "file-loader": "~6.2.0",
+    "html-webpack-plugin": "~5.5.0",
     "mini-css-extract-plugin": "~2.4.5",
-    "node-loader": "^2.0.0",
-    "playwright": "^1.21.1",
-    "playwright-core": "^1.21.1",
-    "progress-webpack-plugin": "^1.0.12",
-    "rimraf": "^3.0.2",
-    "sass": "^1.42.1",
-    "sass-loader": "^12.3.0",
-    "standard-version": "^9.3.1",
-    "style-loader": "^3.3.1",
-    "stylelint": "^13.13.1",
-    "stylelint-config-standard": "^22.0.0",
-    "stylelint-scss": "^3.21.0",
-    "tree-kill": "^1.2.2",
-    "ts-loader": "^9.2.8",
-    "typescript": "^4.6.3",
-    "unzip-crx-3": "^0.2.0",
-    "vue-eslint-parser": "^8.3.0",
-    "vue-loader": "^16.8.3",
-    "webpack": "^5.60.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.4.0",
-    "xvfb-maybe": "^0.2.1"
+    "node-loader": "~2.0.0",
+    "playwright": "~1.21.1",
+    "playwright-core": "~1.21.1",
+    "progress-webpack-plugin": "~1.0.12",
+    "rimraf": "~3.0.2",
+    "sass": "~1.42.1",
+    "sass-loader": "~12.3.0",
+    "standard-version": "~9.3.1",
+    "style-loader": "~3.3.1",
+    "stylelint": "~13.13.1",
+    "stylelint-config-standard": "~22.0.0",
+    "stylelint-scss": "~3.21.0",
+    "tree-kill": "~1.2.2",
+    "ts-loader": "~9.2.8",
+    "typescript": "~4.6.3",
+    "unzip-crx-3": "~0.2.0",
+    "vue-eslint-parser": "~8.3.0",
+    "vue-loader": "~16.8.3",
+    "webpack": "~5.60.0",
+    "webpack-cli": "~4.9.1",
+    "webpack-dev-server": "~4.4.0",
+    "xvfb-maybe": "~0.2.1"
   }
 }
