--- a/.github/workflows/test-e2e-linux.yml
+++ b/.github/workflows/test-e2e-linux.yml
@@ -1,4 +1,4 @@
-name: Build/release [windows]
+name: Test end-to-end [linux]
 
 on: push
 
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [windows-2019]
+        os: [ubuntu-latest]
 
     steps:
       - name: Check out Git repository
@@ -18,12 +18,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14
-
+      
       - name: Install dependencies
         run: npm i
-          
-      - name: Build/release Electron app
-        uses: samuelmeuli/action-electron-builder@v1
-        with:
-          github_token: ${{ secrets.github_token }}
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+        
+      - name: Run tests
+        run: npm run test:e2e
