--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "release:pre": "npm run release -- --prerelease alpha",
     "devtools:install": "node scripts/devtoolsInstaller",
     "postinstall": "electron-builder install-app-deps && npm run devtools:install",
-    "test": "npm run compile && npm run test:dry",
-    "test:dry": "xvfb-maybe -- playwright test",
+    "test:e2e": "npm run compile && npm run test:e2e-dry",
+    "test:e2e-dry": "xvfb-maybe -- playwright test",
     "lint": "eslint . --ext .js,.vue && stylelint \"./src/**/*.{css,scss,sass,vue}\"",
     "lint:fix": "eslint . --ext .js,.vue --fix && stylelint \"./src/**/*.{css,scss,sass,vue}\" --fix",
     "contributors:add": "all-contributors add",
