build: ts config for renderer

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "include": [
     "./tests/**/*", 
     "./src/main/**/*", 
+    "./src/renderer/**/*", 
     "./src/common/interfaces/antares.ts"
   ],
   "compilerOptions": {
