refactor: common to ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "allowJs": true,
     "module": "CommonJS",
     "noImplicitAny": true,
+    "jsx": "preserve",
     "types": [
       "node"
     ],
@@ -19,7 +20,8 @@
     "resolveJsonModule": true,
     "removeComments": true,
     "paths": {
-      "common/*": ["./src/common/*"]
+      "common/*": ["./src/common/*"],
+      "@/*": ["./src/renderer/*"],
     }
   }
 }
