feat(translation): russian translation, closes #266

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
       "MySQL",
       "PostgreSQL",
       "SQLite",
-      "Windows"
+      "Windows",
+      "translation"
    ],
    "svg.preview.background": "transparent"
 }
