chore: package.json changes

--- a/package.json
+++ b/package.json
@@ -48,7 +48,6 @@
       "package.json"
     ],
     "win": {
-      "icon": "assets/icon.png",
       "target": [
         "nsis",
         "portable"
@@ -87,7 +86,7 @@
       "license": "./LICENSE",
       "installerIcon": "assets/icon.ico",
       "uninstallerIcon": "assets/icon.ico",
-      "installerHeader": "assets/icon.png"
+      "installerHeader": "assets/icon.ico"
     },
     "portable": {
       "artifactName": "${productName}-${version}-portable.exe"
