perf(Linux): title bar improvements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
       "PostgreSQL",
       "SQLite",
       "Windows",
-      "translation"
+      "translation",
+      "Linux"
    ],
    "svg.preview.background": "transparent"
 }
