--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "@mdi/font": "~6.1.95",
     "@turf/helpers": "~6.5.0",
     "@vscode/vscode-languagedetection": "~1.0.21",
+    "@vueuse/core": "~8.7.5",
     "ace-builds": "~1.4.13",
     "better-sqlite3": "~7.5.0",
     "electron-log": "~4.4.1",
