--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "./src/main/**/*", 
     "./src/renderer/**/*", 
     "./src/common/interfaces/antares.ts"
-  ],
+, "src/common/libs/jsonToSql.ts"  ],
   "exclude": ["./src/renderer/libs/ext-language_tools.js"],
   "compilerOptions": {
     "baseUrl": "./",
