build: general ci config update

--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "build": "cross-env NODE_ENV=production npm run compile",
     "build:local": "npm run build && electron-builder --publish never",
     "build:appx": "npm run build:local -- --win appx",
-    "rebuild:electron": "rimraf ./dist &&  npm run postinstall",
+    "rebuild:electron": "rimraf ./dist &&  npm run postinstall && npm run devtools:install",
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease alpha",
     "devtools:install": "node scripts/devtoolsInstaller",
-    "postinstall": "electron-builder install-app-deps && npm run devtools:install",
+    "postinstall": "electron-builder install-app-deps",
     "test:e2e": "npm run compile && npm run test:e2e-dry",
     "test:e2e-dry": "xvfb-maybe -- playwright test",
     "lint": "eslint . --ext .js,.ts,.vue && stylelint \"./src/**/*.{css,scss,sass,vue}\"",
@@ -132,6 +132,7 @@
     "moment": "~2.29.4",
     "mysql2": "~2.3.2",
     "pg": "~8.7.1",
+    "pg-connection-string": "~2.5.0",
     "pg-query-stream": "~4.2.3",
     "pgsql-ast-parser": "~7.2.1",
     "pinia": "~2.0.13",
