--- a/.github/workflows/build-mac.yml
+++ b/.github/workflows/build-mac.yml
@@ -12,18 +12,20 @@ jobs:
 
     steps:
       - name: Check out Git repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
-      - name: Install Node.js, NPM and Yarn
-        uses: actions/setup-node@v1
+      - name: Install Node.js
+        uses: actions/setup-node@v3
         with:
-          node-version: 14
-          
+          node-version: 16
+          cache: 'npm'
+      
       - name: Install dependencies
         run: npm i
-        
+
       - name: Build/release Electron app
-        uses: samuelmeuli/action-electron-builder@v1
+        uses: cryogenicplanet/action-electron-builder@v2 # samuelmeuli/action-electron-builder@v1
         with:
           github_token: ${{ secrets.github_token }}
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          skip_install: true
