--- a/.github/workflows/create-artifact-linux.yml
+++ b/.github/workflows/create-artifact-linux.yml
@@ -10,6 +10,11 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v3
 
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+
       - name: npm install & build
         run: |
           npm install
