--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -18,14 +18,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 16
-          cache: 'npm'
       
       - name: Install dependencies
         run: npm i
 
       - name: Build/release Electron app
-        uses: cryogenicplanet/action-electron-builder@v2 # samuelmeuli/action-electron-builder@v1
+        uses: samuelmeuli/action-electron-builder@v1
         with:
           github_token: ${{ secrets.github_token }}
           release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-          skip_install: true
