--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "compile:main": "webpack --mode=production --config webpack.main.config.js",
     "compile:workers": "webpack --mode=production --config webpack.workers.config.js",
     "compile:renderer": "webpack --mode=production --config webpack.renderer.config.js",
-    "build": "cross-env NODE_ENV=production npm run compile",
-    "build:local": "npm run build && electron-builder --publish never",
-    "build:appx": "npm run build:local -- --win appx",
+    "build": "cross-env NODE_ENV=production npm run compile && electron-builder --publish never",
+    "build:appx": "npm run build -- --win appx",
     "rebuild:electron": "rimraf ./dist &&  npm run postinstall && npm run devtools:install",
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease alpha",
