--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm i
         
       - name: "Build"
-        run: npm run build:local
+        run: npm run build
 
       - name: Release
         uses: ncipollo/release-action@v1
