chore: update dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,7 @@
 version: 2
 updates:
   - package-ecosystem: "npm"
+    dependency-type: "production"
     directory: "/"
     schedule:
       interval: "monthly" 
