chore: update dependabot.yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,8 @@
 version: 2
 updates:
   - package-ecosystem: "npm"
-    dependency-type: "production"
+    allow:
+      - dependency-type: "production"
     directory: "/"
     schedule:
       interval: "monthly" 
