--- a/package.json
+++ b/package.json
@@ -64,7 +64,11 @@
       "target": [
         {
           "target": "deb",
-          "arch": "x64"
+          "arch":[
+            "x64",
+            "armv7l",
+            "arm64"
+          ]
         },
         {
           "target": "AppImage",
