style: general lint fix

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -10,6 +10,7 @@
   "rules": {
     "at-rule-no-unknown": null,
     "no-descending-specificity": null,
+    "font-family-no-missing-generic-family-keyword": null,
     "declaration-colon-newline-after": "always-multi-line"
   },
   "syntax": "scss"
