fix(MacOS): empty options on macos menubar

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
       "SQLite",
       "Windows",
       "translation",
-      "Linux"
+      "Linux",
+      "MacOS"
    ],
    "svg.preview.background": "transparent"
 }
