--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
     "marked": "~4.0.19",
     "moment": "~2.29.4",
     "mysql2": "~2.3.2",
-    "node-firebird": "~0.9.9",
+    "node-firebird": "github:Fabio286/node-firebird",
     "pg": "~8.7.1",
     "pg-connection-string": "~2.5.0",
     "pg-query-stream": "~4.2.3",
