build(deps): update better-sqlite to 7.6.2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,8 @@
       "Windows",
       "translation",
       "Linux",
-      "MacOS"
+      "MacOS",
+      "deps"
    ],
    "svg.preview.background": "transparent"
 }
