--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "electron-updater": "~4.6.5",
     "electron-window-state": "~5.0.3",
     "encoding": "~0.1.13",
+    "floating-vue": "~2.0.0-beta.20",
     "leaflet": "~1.7.1",
     "marked": "~4.0.19",
     "moment": "~2.29.4",
