--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "@types/marked": "~4.0.7",
     "@types/node": "~17.0.23",
     "@types/pg": "~8.6.5",
+    "@types/ssh2": "~1.11.6",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
     "@typescript-eslint/parser": "~5.18.0",
     "@vue/compiler-sfc": "~3.2.33",
