--- a/package.json
+++ b/package.json
@@ -205,5 +205,10 @@
     "webpack-cli": "~4.9.1",
     "webpack-dev-server": "~4.11.1",
     "xvfb-maybe": "~0.2.1"
+  },
+  "overrides": {
+    "ssh2-promise": {
+      "ssh2": "~1.11.0"
+    }
   }
 }
