fix: unable to set string fields default values starting with 0

--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
             "x64",
             "armv7l",
             "arm64"
-          ]
+          ],
+          "fpm": ["--deb-no-default-config-files flag"]
         },
         {
           "target": "AppImage",
