--- a/package.json
+++ b/package.json
@@ -65,15 +65,15 @@
         {
           "target": "deb",
           "arch": [
-            "x64"
+            "x64",
+            "armv7l"
           ]
         },
         {
           "target": "AppImage",
           "arch": [
             "x64",
-            "armv7l",
-            "arm64"
+            "armv7l"
           ]
         }
       ],
