--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "electron-window-state": "~5.0.3",
     "encoding": "~0.1.13",
     "floating-vue": "~2.0.0-beta.20",
+    "json2php": "~0.0.7",
     "leaflet": "~1.7.1",
     "marked": "~4.0.19",
     "moment": "~2.29.4",
