--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:appx": "npm run build -- --win appx",
     "rebuild:electron": "rimraf ./dist &&  npm run postinstall && npm run devtools:install",
     "release": "standard-version",
-    "release:pre": "npm run release -- --prerelease alpha",
+    "release:beta": "npm run release -- --prerelease beta",
     "devtools:install": "node scripts/devtoolsInstaller",
     "postinstall": "electron-builder install-app-deps",
     "test:e2e": "npm run compile && npm run test:e2e-dry",
@@ -136,7 +136,7 @@
     "moment": "~2.29.4",
     "mysql2": "~2.3.2",
     "node-firebird": "~1.1.4",
-    "pg": "~8.7.1",
+    "pg": "~8.11.1",
     "pg-connection-string": "~2.5.0",
     "pg-query-stream": "~4.2.3",
     "pgsql-ast-parser": "~7.2.1",
