--- a/.github/workflows/build-beta.yml
+++ b/.github/workflows/build-beta.yml
@@ -1,9 +1,9 @@
-name: Build & release [STABLE]
+name: Build & release [BETA]
 
 on:
   push:
     tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+      - 'v[0-9]+.[0-9]+.[0-9]+-beta.[0-9]+'
 
 env:
   BRANCH_NAME: ${{ github.head_ref || github.ref_name }}
@@ -20,7 +20,7 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v3
         with: 
-          ref: master
+          ref: beta
 
       - name: Install Node.js
         uses: actions/setup-node@v3
