--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
           "target": "deb",
           "arch": [
             "x64",
+            "arm64",
             "armv7l"
           ]
         },
@@ -73,6 +74,7 @@
           "target": "AppImage",
           "arch": [
             "x64",
+            "arm64",
             "armv7l"
           ]
         }
@@ -134,7 +136,7 @@
     "leaflet": "~1.7.1",
     "marked": "~4.0.19",
     "moment": "~2.29.4",
-    "mysql2": "~2.3.2",
+    "mysql2": "~3.5.2",
     "node-firebird": "~1.1.4",
     "pg": "~8.11.1",
     "pg-connection-string": "~2.5.0",
