--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "release:beta": "npm run release -- --prerelease beta",
     "devtools:install": "node scripts/devtoolsInstaller",
     "postinstall": "electron-builder install-app-deps",
+    "translation:check": "ts-node ./scripts/translationCheck.ts",
     "test:e2e": "npm run compile && npm run test:e2e-dry",
     "test:e2e-dry": "xvfb-maybe -- playwright test",
     "lint": "eslint . --ext .js,.ts,.vue && stylelint \"./src/**/*.{css,scss,sass,vue}\"",
@@ -198,6 +199,7 @@
     "stylelint-scss": "~4.3.0",
     "tree-kill": "~1.2.2",
     "ts-loader": "~9.2.8",
+    "ts-node": "~10.9.1",
     "typescript": "~4.6.3",
     "unzip-crx-3": "~0.2.0",
     "vue-eslint-parser": "~8.3.0",
