ci: manual creation of arm64 linux artifacts

--- a/.github/workflows/create-artifact-linux-arm64.yml
+++ b/.github/workflows/create-artifact-linux-arm64.yml
@@ -9,11 +9,13 @@ jobs:
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v3
+        with: 
+          ref: master
 
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
       
       - name: Install dependencies
         run: npm i
