--- a/package.json
+++ b/package.json
@@ -193,10 +193,10 @@
     "sass-loader": "~12.3.0",
     "standard-version": "~9.3.1",
     "style-loader": "~3.3.1",
-    "stylelint": "~14.9.1",
-    "stylelint-config-recommended-vue": "~1.4.0",
-    "stylelint-config-standard": "~26.0.0",
-    "stylelint-scss": "~4.3.0",
+    "stylelint": "^15.11.0",
+    "stylelint-config-recommended-vue": "~1.5.0",
+    "stylelint-config-standard": "~34.0.0",
+    "stylelint-scss": "~5.3.0",
     "tree-kill": "~1.2.2",
     "ts-loader": "~9.2.8",
     "ts-node": "~10.9.1",
