--- a/package.json
+++ b/package.json
@@ -146,7 +146,7 @@
     "source-map-support": "~0.5.20",
     "spectre.css": "~0.5.9",
     "sql-formatter": "~13.0.0",
-    "ssh2-promise": "~1.0.2",
+    "@fabio286/ssh2-promise": "~1.0.4-b",
     "v-mask": "~2.3.0",
     "vue": "~3.3.4",
     "vue-i18n": "~9.2.2",
@@ -208,10 +208,5 @@
     "webpack-cli": "~4.9.1",
     "webpack-dev-server": "~4.11.1",
     "xvfb-maybe": "~0.2.1"
-  },
-  "overrides": {
-    "ssh2-promise": {
-      "ssh2": "github:Fabio286/ssh2"
-    }
   }
 }
